# metrical

./: Cargo.toml  README.md
src/: collector.rs  configuration.rs  connection.rs  init.rs  lib.rs  protocol.rs  shared.rs
src/metric/: counter.rs  gauge.rs  mod.rs  timer.rs
tests/: use_from_env.rs
