[package]
name = "metrical"
version = "0.1.0"
authors = ["aives <aives@webroot.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.114", features=["derive"]}
serde-pickle = "0.6.0"
byteorder = "1.3.4"