[package]
name = "metrical"
version = "0.1.1"
authors = ["aives <austin.jay.ives@gmail.com>"]
edition = "2018"
description = "Graphite/Statsd metrics client"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["metrics", "graphite", "statsd"]
categories = ["development-tools::debugging"]

[badges]
maintenance = {status = "actively-developed"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pickle = ["serde", "serde-pickle"]

[dependencies]
byteorder = "1.3.4"

serde = {version = "1.0.114", features = ["derive"], optional=true}
serde-pickle = {version = "0.6.0", optional = true}
